# microcontroller_aggregated_stuff

./: AUTHORS  README.md  pyproject.toml
jukebox/: LICENSE  alle_jahre_wieder.py  auld_lang_syne.py  der_kuckuck_und_der_esel.py  die_gedanken_sind_frei.py  froh_und_munter.py  jukebox.py  kling_gloeckchen_kling.py  leise_rieselt_der_schnee.py  main.py  morgen_kinder_wirds_was_geben.py  passacaglia.py  silent_night.py
